--- a/themes/next/shared/partials/client_list.phtml
+++ b/themes/next/shared/partials/client_list.phtml
@@ -59,8 +59,8 @@
                 </small>
             </div>
             <!-- EDP: client_domain_status_not_ok -->
-            <div>
-                <a href="change_user_interface.php?to_id={CLIENT_ID}" class="btn sm muted switch">
+            <div class="action-column right-xs">
+                <a href="change_user_interface.php?to_id={CLIENT_ID}" class="btn sm muted icon-xxs">
                     <i data-eva="swap"></i>
                     <span><?=tohtml(tr('Switch')); ?></span>
                 </a>
