overview style fixes, table th, td styles

--- a/themes/next/assets/scss/components/table.scss
+++ b/themes/next/assets/scss/components/table.scss
@@ -131,6 +131,7 @@
         tbody {
             tr {
                 &:not(:last-child) {
+                    th,
                     td {
                         @include min(xs) {
                             border-bottom: 1px solid var(--line);
@@ -142,6 +143,7 @@
                         }
                     }
                 }
+                th,
                 td {
                     padding-top: 8px;
                     padding-bottom: 8px;
@@ -159,6 +161,8 @@
                             padding-bottom: 12px;
                         }
                     }
+                }
+                td {
                     &[data-th] {
                         @include max(xs) {
                             position: relative;
@@ -185,6 +189,10 @@
                             }
                         }
                     }
+                }
+                th {
+                    font-weight: 500;
+                    color: var(--text-dark);
                 }
             }
         }
