--- a/themes/next/assets/scss/sections/overview.scss
+++ b/themes/next/assets/scss/sections/overview.scss
@@ -1,10 +1,13 @@
 //main: ../style.scss
 
 #overview-stats {
-    --auto-grid-min-size: 220px;
+    --auto-grid-min-size: 228px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size), 1fr));
     grid-gap: 32px;
+    &.large {
+        --auto-grid-min-size: 300px;
+    }
     @include max(sm) {
         grid-gap: 24px;
     }
