domains manage WIP

--- a/themes/next/assets/scss/components/table.scss
+++ b/themes/next/assets/scss/components/table.scss
@@ -189,6 +189,11 @@
                             }
                         }
                     }
+                    &[colspan] {
+                        .message {
+                            margin: 8px 0;
+                        }
+                    }
                 }
                 th {
                     font-weight: 500;
