alias add, form-select inline class

--- a/themes/next/assets/scss/components/forms.scss
+++ b/themes/next/assets/scss/components/forms.scss
@@ -99,6 +99,10 @@ textarea {
             right: 6px;
         }
     }
+    &.inline {
+        display: inline-block;
+        vertical-align: middle;
+    }
 }
 
 .form-element {
