form-group focus fix, css improve

--- a/themes/next/assets/scss/components/forms.scss
+++ b/themes/next/assets/scss/components/forms.scss
@@ -179,6 +179,10 @@ textarea {
         }
     }
     &.focus {
+        .form-select select,
+        .form-field {
+            border-color: var(--primary);
+        }
         & > span {
             color: var(--primary);
             background: var(--primary-pale);
