ftp choose dir, add & edit ftp user markup and styles

--- a/themes/next/assets/scss/components/buttons.scss
+++ b/themes/next/assets/scss/components/buttons.scss
@@ -124,6 +124,18 @@
             }
         }
     }
+    &.icon-right {
+        svg {
+            left: auto;
+            right: -4px;
+        }
+        &.sm {
+            svg {
+                left: auto;
+                right: -3px;
+            }
+        }
+    }
     &.center {
         display: table;
         margin-left: auto;
