--- a/themes/next/assets/scss/style.scss
+++ b/themes/next/assets/scss/style.scss
@@ -17,6 +17,7 @@
 @import 'components/dialog';
 @import 'components/table';
 @import 'components/helper';
+@import 'components/ftp';
 
 @import 'sections/general';
 @import 'sections/simple';
