--- a/themes/next/assets/scss/components/forms.scss
+++ b/themes/next/assets/scss/components/forms.scss
@@ -323,6 +323,12 @@ textarea {
     }
 }
 
+.static {
+    margin: 12px 0 0 0;
+    line-height: 23px;
+    font-size: 16px;
+}
+
 label {
     &.checkbox,
     &.radio,
