settings general markup, accordion WIP
going to replace jquery ui

--- a/themes/next/assets/scss/style.scss
+++ b/themes/next/assets/scss/style.scss
@@ -18,6 +18,7 @@
 @import 'components/table';
 @import 'components/helper';
 @import 'components/ftp';
+@import 'components/accordion';
 
 @import 'sections/general';
 @import 'sections/simple';
