--- a/themes/next/assets/scss/components/accordion.scss
+++ b/themes/next/assets/scss/components/accordion.scss
@@ -2,79 +2,95 @@
 
 .accordion {
     background: var(--pale-light);
-    .title {
-        outline: none;
-        position: relative;
+    .box {
         background: #fff;
-        border-radius: 4px;
-        padding: 8px 16px;
-        margin: 16px 0;
-        font-weight: 500;
-        cursor: pointer;
         transition: box-shadow .4s ease, color .4s ease;
         border: 1px solid var(--line);
-        box-shadow: 0 1px 4px -1px var(--shadow);
+        margin: 16px 0;
+        border-radius: 4px;
+        transition: box-shadow .4s ease;
         &:first-child {
             margin-top: 0;
         }
+        & > div {
+            &:first-child {
+                position: relative;
+                cursor: pointer;
+                padding: 8px 16px;
+                font-weight: 500;
+                transition: color .4s ease, padding .4s ease;
+                & > span {
+                    --y: 0;
+                    width: 24px;
+                    height: 24px;
+                    display: block;
+                    position: absolute;
+                    z-index: 1;
+                    top: 9px;
+                    right: 12px;
+                    cursor: pointer;
+                    transition: transform .4s ease;
+                    transform: translateY(var(--y));
+                    &:before,
+                    &:after {
+                        --r: 0deg;
+                        content: '';
+                        width: 2px;
+                        height: 8px;
+                        border-radius: 1px;
+                        background: var(--text);
+                        position: absolute;
+                        right: 8px;
+                        top: 7px;
+                        transform-origin: 50% 50%;
+                        transition: transform .3s ease, background .3s ease;
+                        transform: scale(.92, .8) rotate(var(--r));
+                    }
+                    &:before {
+                        margin-right: 5px;
+                        --r: -50deg;
+                    }
+                    &:after {
+                        --r: 50deg;
+                    }
+                    &:hover {
+                        &:before,
+                        &:after {
+                            background: var(--text-light);
+                        }
+                    }
+                }
+            }
+            &:last-child {
+                padding: 8px 16px 16px 16px;
+                display: none;
+            }
+        }
         &:hover {
-            color: var(--text-dark);
-            box-shadow: 0 1px 6px -1px var(--shadow-dark);
-        }
-        & > span {
-            width: 24px;
-            height: 24px;
-            display: block;
-            position: absolute;
-            z-index: 1;
-            top: 9px;
-            right: 12px;
-            cursor: pointer;
-            &:before,
-            &:after {
-                --r: 0deg;
-                content: '';
-                width: 2px;
-                height: 8px;
-                border-radius: 1px;
-                background: var(--text);
-                position: absolute;
-                right: 8px;
-                top: 7px;
-                transform-origin: 50% 50%;
-                transition: transform .3s ease, background .3s ease;
-                transform: scale(.92, .8) rotate(var(--r));
-            }
-            &:before {
-                margin-right: 5px;
-                --r: -50deg;
-            }
-            &:after {
-                --r: 50deg;
-            }
-            &:hover {
-                &:before,
-                &:after {
-                    background: var(--text-light);
+            box-shadow: 0 1px 4px -1px var(--shadow-dark);
+            & > div {
+                &:first-child {
+                    color: var(--text-dark);
                 }
             }
         }
-        &.ui-accordion-header-active {
-            color: var(--primary);
-            & > span {
-                &:before {
-                    --r: -130deg;
-                }
-                &:after {
-                    --r: 130deg;
+        &.active {
+            box-shadow: 0 1px 4px -1px var(--shadow);
+            & > div {
+                &:first-child {
+                    padding: 16px;
+                    color: var(--primary);
+                    & > span {
+                        --y: 7px;
+                        &:before {
+                            --r: -130deg;
+                        }
+                        &:after {
+                            --r: 130deg;
+                        }
+                    }
                 }
             }
         }
-    }
-    .content {
-        border-radius: 4px;
-        background: #fff;
-        border: 1px solid var(--line);
-        padding: 16px;
     }
 }
