custom menu markup, error form-field, table strong string

--- a/themes/next/assets/scss/components/forms.scss
+++ b/themes/next/assets/scss/components/forms.scss
@@ -20,7 +20,9 @@
     &:hover {
         &:not(:focus) {
             &:not(:disabled) {
-                border-color: var(--border-dark);
+                &:not(.error) {
+                    border-color: var(--border-dark);
+                }
             }
         }
     }
@@ -32,6 +34,9 @@
         background: var(--pale-light);
         color: var(--text-light);
         cursor: not-allowed;
+    }
+    &.error {
+        --border: var(--error);
     }
 }
 
