table flex class

--- a/themes/next/assets/scss/components/table.scss
+++ b/themes/next/assets/scss/components/table.scss
@@ -212,6 +212,15 @@
                             }
                         }
                     }
+                    .flex {
+                        display: flex;
+                        align-items: center;
+                        & > * {
+                            &:not(:last-child) {
+                                margin-right: 16px;
+                            }
+                        }
+                    }
                 }
             }
         }
