improve settings lang markup

--- a/themes/next/admin/multilanguage.phtml
+++ b/themes/next/admin/multilanguage.phtml
@@ -20,29 +20,28 @@
                 <th>{TR_LANGUAGE_NAME}</th>
                 <th>{TR_NUMBER_TRANSLATED_STRINGS}</th>
                 <th>{TR_LANGUAGE_CREATION_DATE}</th>
-                <th>{TR_DEFAULT_LANGUAGE}</th>
             </tr>
         </thead>
         <tbody>
             <!-- BDP: language_block -->
             <tr>
                 <td>
-                    <label class="strong-block" for="radio_defaultLanguage_{LOCALE}">{LANGUAGE_NAME}</label>
-                    <small data-tooltip="{TR_LAST_TRANSLATOR}">{LAST_TRANSLATOR}</small>
+                    <div class="flex">
+                        <form method="post">
+                            <label class="radio noMargin">
+                                <input type="radio" name="defaultLanguage" id="radio_defaultLanguage_{LOCALE}" value="{LOCALE}"{LOCALE_CHECKED}>
+                                <span></span>
+                            </label>
+                            <input type="hidden" name="uaction" id="uaction" value="changeLanguage">
+                        </form>
+                        <div>
+                            <label class="strong-block" for="radio_defaultLanguage_{LOCALE}">{LANGUAGE_NAME}</label>
+                            <small data-tooltip="{TR_LAST_TRANSLATOR}">{LAST_TRANSLATOR}</small>
+                        </div>
+                    </div>
                 </td>
                 <td>{NUMBER_TRANSLATED_STRINGS}</td>
                 <td>{LANGUAGE_CREATION_DATE}</td>
-                <td>
-                    <form method="post">
-                        <label class="radio noMargin">
-                            <input type="radio" name="defaultLanguage" id="radio_defaultLanguage_{LOCALE}" value="{LOCALE}"{LOCALE_CHECKED}>
-                            <span>
-                                <div class="hide--xs">{TR_DEFAULT_LANGUAGE}</div>
-                            </span>
-                        </label>
-                        <input type="hidden" name="uaction" id="uaction" value="changeLanguage">
-                    </form>
-                </td>
             </tr>
             <!-- EDP: language_block -->
         </tbody>
