update vars, added danger button

--- a/themes/next/assets/scss/components/buttons.scss
+++ b/themes/next/assets/scss/components/buttons.scss
@@ -69,6 +69,10 @@
             }
         }
     }
+    &.danger {
+        --background: var(--error);
+        --shadow-c: var(--error-shadow);
+    }
     &.muted {
         --background: var(--lighter);
         --color: var(--text);
