--- a/themes/next/assets/scss/sections/list.scss
+++ b/themes/next/assets/scss/sections/list.scss
@@ -219,3 +219,80 @@
         }
     }
 }
+
+#sql-list {
+    --auto-grid-min-size: 280px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size), 1fr));
+    grid-gap: 32px;
+    @include max(sm) {
+        grid-gap: 24px;
+    }
+    @include max(xs) {
+        grid-gap: 16px;
+    }
+    .box {
+        background: #fff;
+        border-radius: 4px;
+        border: 1px solid var(--border);
+        box-shadow: 0 1px 2px var(--shadow);
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        h3 {
+            margin: 0 0 12px 0;
+        }
+        & > ul {
+            margin: 0 0 12px 0;
+            padding: 0;
+            list-style: none;
+            font-size: 14px;
+            li {
+                position: relative;
+                padding-right: 32px;
+                .buttons {
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    right: 0;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    padding-left: 4px;
+                    border-left: 1px solid var(--border);
+                    a {
+                        margin: 2px 0;
+                        display: block;
+                        svg {
+                            width: 20px;
+                            height: 20px;
+                            display: block;
+                        }
+                    }
+                }
+                &:not(:last-child) {
+                    margin-bottom: 8px;
+                }
+                p {
+                    margin: 0 0 4px 0;
+                    display: flex;
+                    justify-content: space-between;
+                    strong,
+                    & > span {
+                        display: block;
+                        span {
+                            display: inline-block;
+                            vertical-align: top;
+                        }
+                    }
+                }
+            }
+        }
+        & > .buttons {
+            margin-top: auto;
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+}
